# gv

./: .clang-format  .cmake-format.yaml  .gdb_history  .gitignore  .map.txt  Brewfile  CMakeLists.txt  INSTALL.sh  Makefile  README.md  _temp__.rtlil  b.txt  debug.dofile  debug.vcd  gv0  out.txt  r1.aag  sim_main.cpp  todo.cpp  tt.aag  v.txt  y  y.pub  yosys_patch.cmake
.github/workflows/: build-linux.yml  build-macos.yml
design/: read.dofile
design/SoCV/basic/: a.v
design/broken/: design2.v
design/broken/IcContest/: Bicubic.v  ImgROM.v  LBP.v  LEDDC.v  ResultSRAM.v  flash_a.v  geofence.v  tb.v  testfixture_30fps.v  testfixture_60fps.v
design/broken/case14/: circuit_1.v  circuit_2.v  input
design/broken/test14/: g1.v  r1.v
design/normal/: design1.v  design3.v  design4.v  design5.v  design6.v
design/normal/IcContest/: CONV.v  DT.v  FAS.v  IOTDF.v  JAM.v  LASER.v  NFC.v  SET.v  SME.v  STI_DAC.v  huffman.v
design/normal/case01/: input
design/normal/case11/: circuit_1.v  circuit_2.v  input
design/normal/case12/: circuit_1.v  circuit_2.v  input
design/normal/case13/: circuit_1.v  circuit_2.v  input
design/normal/case15/: circuit_1.v  circuit_2.v  input
design/normal/case16/: circuit_1.v  circuit_2.v  input
design/normal/case17/: circuit_1.v  circuit_2.v  input
design/normal/case18/: circuit_1.v  circuit_2.v  input
design/normal/case19/: circuit_1.v  circuit_2.v  input
design/normal/case20/: circuit_1.v  circuit_2.v  input
design/normal/test21/: top_primitive.v
design/normal/test23/: top_primitive.v
design/normal/test24/: top_primitive.v
design/normal/test25/: top_primitive.v
design/normal/test26/: top_primitive.v
design/normal/test27/: top_primitive.v
design/normal/test28/: top_primitive.v
design/normal/test29/: top_primitive.v
design/normal/test30/: top_primitive.v
designs/Simulation/: adder.v  adder_input.pattern  alu.v  alu_input.pattern  and.v
designs/SoCV/vending/: input-Cex.pattern
doc/: BUILD_TUTORIAL.md  README.md
docs/: BUILD_TUTORIAL.md
engine/: abc.script  yosys.script
include/: FileV.h  GlobalV.h  HeapV.h  ProofV.h  SolverTypesV.h  SolverV.h  SortV.h  VarOrderV.h  abcCmd.h  abcMgr.h  aig  base  bdd  bddCmd.h  bool  btortypes.h  cadAlg.h  cirCmd.h  cirDef.h  cirFraig.h  cirGate.h  cirMgr.h  generic.h  gvBitVec.h  gvSat.h  gvSatCmd.h  gvSatMgr.h  gv_src  gv_src_boolector  gv_src_btor2parser  gv_src_lgl  kernel  map  misc  opt  phys  proof  proveCmd.h  reader.h  sat  (+2 more)
patches/: vcd_parser.patch  vcd_parser_patch.cmake  yosys.patch  yosys_linux.patch  yosys_mac.patch  yosys_patch.cmake
satsolvers/minisat/: File.cpp  File.h  Global.h  Proof.cpp  Proof.h  Solver.cpp  Solver.h  SolverTypes.h  VarOrder.h  reader.cpp  reader.h
scripts/: RUN_TEST
scripts/andrew_cad_dofile/: cad1_dofile
simulator/cxxrtl/: Makefile  interface.hpp  simulator.hpp  testbench.cpp  testbench_sim.cpp  utility.hpp
simulator/cxxrtl/template/: interface.hpp
simulator/verilator/: .gdb_history  Makefile  interface.hpp  simulator.hpp  testbench.cpp  utility.hpp
simulator/verilator/template/: assertion.hpp  control_signal.hpp  interface.hpp
simulators/cxxrtl/: Makefile
simulators/cxxrtl/src/: interface.hpp  simulator.hpp  testbench.cpp  (+1 more)
simulators/verilator/: Makefile  control_signal.hpp  interface.hpp  testbench.cpp  utility.hpp
src/: Makefile.in
src/abc/: .depend.mak  .extheader.mak  Makefile  abcCmd.cpp  abcCmd.h  abcExt.h  abcMgr.cpp  abcMgr.h  abcProve.cpp  gvAbcCmd.cpp  gvAbcMgr.cpp  gvAbcMgr.h
src/app/: appCmd.cpp  appCmd.h  appMgr.cpp  appMgr.h
src/bdd/: .depend.mak  bddCmd.cpp  bddCmd.h  bddMgrV.cpp  bddMgrV.h  bddNodeV.cpp  bddNodeV.h  myHash.h
src/cad/: Makefile  cadAlg.cpp  cadAlg.h
src/cir/: .depend.mak  .extheader.mak  CirItf.cpp  Makefile  cirAig.cpp  cirBdd.cpp  cirCmd.cpp  cirCmd.h  cirCut.cpp  cirCut.h  cirDef.h  cirECO.h  cirFraig.cpp  cirFraig.h  cirGate.cpp  cirGate.h  cirItf.cpp  cirMgr.cpp  cirMgr.h  cirOpt.cpp  cirSim.cpp
src/cmd/: .depend.mak  cmdCharDef.h  cmdParser.h  gvCmdComm.cpp  gvCmdComm.h  gvCmdMgr.cpp  gvCmdMgr.h
src/cxxrtl/: cxxMgr.cpp  cxxMgr.h
src/exp/: demoVCD.cpp  expCmd.cpp  expCmd.h
src/ext/: CMakeLists.txt  Makefile  sim.cc  sim.d
src/gvsat/: .depend.mak  .extheader.mak  Makefile  gvSat.cpp  gvSat.h
src/itp/: .depend.mak  .extheader.mak  .map.txt  GlobalV.h  Makefile  SolverV.cpp  gvSat.cpp  gvSat.h  gvSatCmd.cpp  gvSatCmd.h  gvSatMgr.cpp  gvSatMgr.h  itpCmd.cpp  itpCmd.h  itpMgr.cpp  itpMgr.h  sat.cpp  sat.h  satMgr.cpp  satMgr.h  v3BitVec.h
src/main/: .depend.mak  Makefile  main.cpp
src/mod/: .depend.mak  Makefile  gvModCmd.cpp  gvModCmd.h  gvModMgr.cpp  gvModMgr.h  modCmd.cpp  modCmd.h  modMgr.cpp  modMgr.h
src/ntk/: .depend.mak  .mapGold.txt  gvNtk.cpp  gvNtk.h  gvNtkBdd.cpp  gvNtkCmd.cpp  gvNtkCmd.h
src/prove/: .depend.mak  proveBdd.cpp  proveCmd.cpp  proveCmd.h
src/sat/: GlobalV.h  Solver.h  glucoseMgr.cpp  glucoseMgr.h  gvSat.cpp  gvSat.h  minisatMgr.cpp  minisatMgr.h  ref  reff  sat.h  satCmd.cpp  satCmd.h  satMgr.cpp  satMgr.h
src/sim/: .depend.mak  gvSimCmd.cpp  gvSimCmd.h  simCmd.cpp  simCmd.h  simMgr.cpp  simMgr.h  vcdMgr.cpp  vcdMgr.h  vcdPrint.cpp
src/util/: Makefile  fileType.h  gvIntType.h  gvMsg.h  gvType.h  gvUsage.h  myGetChar.cpp  myHashMap.h  myHashSet.h  myString.cpp  myUsage.h  rnGen.h  util.cpp  util.h
src/utileng/: utilEng.h  utilSim.h  utilVrf.h
src/vrf/: .depend.mak  Makefile  ecoCir.cpp  ecoMgr.cpp  ecoMgr.h  ecoNtk.cpp  ecoNtk.h  gvEcoUtil.cpp  gvVrfCmd.cpp  gvVrfCmd.h
src/vrlt/: vrltMgr.cpp  vrltMgr.h
src/yosys/: .depend.mak  .extheader.mak  Makefile  gvYosysCmd.cpp  gvYosysCmd.h  gvYosysMgr.cpp  gvYosysMgr.h  yosysCmd.cpp  yosysCmd.h  yosysExt.h  yosysMgr.cpp  yosysMgr.h  yosysPrint.cpp
testbench/: adder_input.pattern  arbiter2.v  b.v  basic.v  cle.v  dimacs_sat.txt  dimacs_unsat.txt  vending_input.pattern
verilator/: IOWrapper.py  Makefile  input.pattern  interface.hpp  simulator.hpp  testbench.cpp  utility.hpp  vrltGenItf.cpp  vrltMain.cpp
verilator/include/: crpg.hpp
verilator/template/: interface.hpp
(+127 files in other folders)
